--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
             </section>
             <section id="playlist-area">
                 <img src="./media/somkeddream.jpg" alt="Song Thumbnail">
-                <h2>Artist Name</h2>
-                <h3>Track Name</h3>
+                <div id="track-info">
+                    <h2>Artist Name</h2>
+                    <h3>Track Name</h3>
+                </div>
             </section>
             <audio id="tracks">
             </audio>
