adjust teh player layout on mobile

--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
     <body>
         <main>
             <section id="player-area">
-                <div id="audio-animation">
-                    <img src="#" alt="Audio Animation">
-                </div>
-                <div id="progress-bar"></div>
-                <div id="current-time">00.00</div>
-                <div id="total-length">00.00</div>
+                <img id="thumbnail" src="./media/somkeddream.jpg" alt="Song Thumbnail">
                 <div id="controls">
                     <img src="./images/icons/skip_previous.svg" alt="">
                     <img src="./images/icons/replay_10.svg" alt="">
@@ -26,13 +21,18 @@
                     <img src="./images/icons/forward.svg" alt="">
                     <img src="./images/icons/skip_next.svg" alt="">
                 </div>
+                <div id="progress-bar"></div>
+                <div id="current-time">00.00</div>
+                <div id="total-length">00.00</div>
+                <div id="track-info">
+                    <p id="artist-name">Artist Name</p>
+                    <p id="track-name">Track Name</p>
+                </div>
+                <!-- <div id="audio-animation">
+                    <img src="#" alt="Audio Animation">
+                </div> -->
             </section>
             <section id="playlist-area">
-                <img src="./media/somkeddream.jpg" alt="Song Thumbnail">
-                <div id="track-info">
-                    <h2>Artist Name</h2>
-                    <h3>Track Name</h3>
-                </div>
             </section>
             <audio id="tracks">
             </audio>
