--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <body>
         <main>
             <section id="player-area">
-                <img id="thumbnail" src="./media/somkeddream.jpg" alt="Song Thumbnail">
+                <div id="player">
+                    <img id="thumbnail" src="./media/somkeddream.jpg" alt="Song Thumbnail">
+                    <div id="track-info-p">
+                        <p id="artist-name">Yasir Elamin</p>
+                        <p id="track-name">Smoked Dream</p>
+                    </div>
+                </div>
                 <div id="controls">
                     <img src="./images/icons/skip_previous.svg" alt="">
                     <img src="./images/icons/replay_10.svg" alt="">
@@ -20,19 +26,71 @@
                     <img src="./images/icons/stop.svg" alt="">
                     <img src="./images/icons/forward.svg" alt="">
                     <img src="./images/icons/skip_next.svg" alt="">
+                </div id="progress">
+                    <div id="progress-bar"></div>
+                    <div id="current-time">00.00</div>
+                    <div id="total-length">00.00</div>
                 </div>
-                <div id="progress-bar"></div>
-                <div id="current-time">00.00</div>
-                <div id="total-length">00.00</div>
-                <div id="track-info">
-                    <p id="artist-name">Artist Name</p>
-                    <p id="track-name">Track Name</p>
-                </div>
-                <!-- <div id="audio-animation">
-                    <img src="#" alt="Audio Animation">
-                </div> -->
             </section>
+            <hr>
             <section id="playlist-area">
+                <h2 id="playlist-header">Your Play List:</h2>
+                <div class="list-item active">
+                    <img src="./media/somkeddream.jpg" alt="Song Thumbnail">
+                    <div class="track-info-pl">
+                        <p class="artist-list">Yasir Elamin</p>
+                        <p class="track-list">Smoked Dream</p>
+                    </div>
+                    <p class="duration">00.00</p>
+                </div>
+                <div class="list-item">
+                    <img src="./media/gameofthrones.jpg" alt="Song Thumbnail">
+                    <div class="track-info-pl">
+                        <p class="artist-list">Yasir Elamin</p>
+                        <p class="track-list">Game of Thrones Theme</p>
+                    </div>
+                    <p class="duration">00.00</p>
+                </div>
+                <div class="list-item">
+                    <img src="./media/keystoimmagination.jpg" alt="Song Thumbnail">
+                    <div class="track-info-pl">
+                        <p class="artist-list">Yasir Elamin</p>
+                        <p class="track-list">Keys To Imagination</p>
+                    </div>
+                    <p class="duration">00.00</p>
+                </div>
+                <div class="list-item">
+                    <img src="./media/thebeginning.jpg" alt="Song Thumbnail">
+                    <div class="track-info-pl">
+                        <p class="artist-list">Yasir Elamin</p>
+                        <p class="track-list">The Beginning</p>
+                    </div>
+                    <p class="duration">00.00</p>
+                </div>
+                <div class="list-item">
+                    <img src="./media/bingo.jpg" alt="Song Thumbnail">
+                    <div class="track-info-pl">
+                        <p class="artist-list">Yasir Elamin</p>
+                        <p class="track-list">Bingo</p>
+                    </div>
+                    <p class="duration">00.00</p>
+                </div>
+                <div class="list-item">
+                    <img src="./media/somkeddream.jpg" alt="Song Thumbnail">
+                    <div class="track-info-pl">
+                        <p class="artist-list">Yasir Elamin</p>
+                        <p class="track-list">Track Name</p>
+                    </div>
+                    <p class="duration">00.00</p>
+                </div>
+                <div class="list-item">
+                    <img src="./media/alphabet.jpg" alt="Song Thumbnail">
+                    <div class="track-info-pl">
+                        <p class="artist-list">Yasir Elamin</p>
+                        <p class="track-list">The Alphabet Song</p>
+                    </div>
+                    <p class="duration">00.00</p>
+                </div>
             </section>
             <audio id="tracks">
             </audio>
