first draft mobile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     <img src="./images/icons/stop.svg" alt="">
                     <img src="./images/icons/forward.svg" alt="">
                     <img src="./images/icons/skip_next.svg" alt="">
-                </div id="progress">
+                </div>
+                <div id="progress">
                     <div id="progress-bar"></div>
                     <div id="current-time">00.00</div>
                     <div id="total-length">00.00</div>
