--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     </div>
                 </div>
                 <div id="controls">
-                    <img src="./images/icons/skip_previous.svg" alt="">
-                    <img src="./images/icons/replay_10.svg" alt="">
-                    <img src="./images/icons/play_arrow.svg" alt="">
-                    <img src="./images/icons/pause.svg" alt="">
-                    <img src="./images/icons/stop.svg" alt="">
-                    <img src="./images/icons/forward.svg" alt="">
-                    <img src="./images/icons/skip_next.svg" alt="">
+                    <button><img src="./images/icons/skip_previous.svg" alt=""></button>
+                    <button><img src="./images/icons/replay_10.svg" alt=""></button>
+                    <button><img src="./images/icons/play_arrow.svg" alt=""></button>
+                    <button><img src="./images/icons/pause.svg" alt=""></button>
+                    <button><img src="./images/icons/stop.svg" alt=""></button>
+                    <button><img src="./images/icons/forward.svg" alt=""></button>
+                    <button><img src="./images/icons/skip_next.svg" alt=""></button>
                 </div>
                 <div id="progress">
                     <div id="progress-bar"></div>
@@ -73,14 +73,6 @@
                     <div class="track-info-pl">
                         <p class="artist-list">Yasir Elamin</p>
                         <p class="track-list">Bingo</p>
-                    </div>
-                    <p class="duration">00.00</p>
-                </div>
-                <div class="list-item">
-                    <img src="./media/somkeddream.jpg" alt="Song Thumbnail">
-                    <div class="track-info-pl">
-                        <p class="artist-list">Yasir Elamin</p>
-                        <p class="track-list">Track Name</p>
                     </div>
                     <p class="duration">00.00</p>
                 </div>
