--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     </div>
                 </div>
                 <div id="controls">
-                    <button><img src="./images/icons/skip_previous.svg" alt=""></button>
-                    <button><img src="./images/icons/replay_10.svg" alt=""></button>
-                    <button><img src="./images/icons/play_arrow.svg" alt=""></button>
-                    <button><img src="./images/icons/pause.svg" alt=""></button>
-                    <button><img src="./images/icons/stop.svg" alt=""></button>
-                    <button><img src="./images/icons/forward.svg" alt=""></button>
-                    <button><img src="./images/icons/skip_next.svg" alt=""></button>
+                    <button id="btnSkipPre"><img src="./images/icons/skip_previous.svg" alt=""></button>
+                    <button id="btnReplay"><img src="./images/icons/replay_10.svg" alt=""></button>
+                    <button id="btnPlay"><img src="./images/icons/play_arrow.svg" alt=""></button>
+                    <button id="btnPause"><img src="./images/icons/pause.svg" alt=""></button>
+                    <button id="btnStop"><img src="./images/icons/stop.svg" alt=""></button>
+                    <button id="btnForward"><img src="./images/icons/forward.svg" alt=""></button>
+                    <button id="btnSkipNext"><img src="./images/icons/skip_next.svg" alt=""></button>
                 </div>
                 <div id="progress">
                     <div id="progress-bar"></div>
@@ -91,7 +91,6 @@
 
         <footer>
         </footer>
-        <script src="./main.js">
-        </script>
+        <script src="./main.js" type="module"></script>
     </body>
 </html>
