Added duration to playlist

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                     <p class="duration">00.00</p>
                 </div> -->
             </section>
-            <audio id="tracks">
-            </audio>
+            <!-- <audio id="list-track" src="./media/somkeddream.mp3"> </audio> -->
         </main>
 
         <footer>
