Basic Controls Working

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <main>
+        <main id="main">
             <section id="player-area">
                 <div id="player">
                     <img id="thumbnail" src="./media/somkeddream.jpg" alt="Song Thumbnail">
