working on formated duration

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <main id="main">
             <section id="player-area">
                 <div id="player">
-                    <img id="thumbnail" src="./media/somkeddream.jpg" alt="Song Thumbnail">
+                    <img id="thumbnail" alt="Song Thumbnail">
                     <div id="track-info-p">
-                        <p id="artist-name">Yasir Elamin</p>
-                        <p id="track-name">Smoked Dream</p>
+                        <p id="artist-name"></p>
+                        <p id="track-name"></p>
                     </div>
                 </div>
                 <div id="controls">
@@ -30,7 +30,7 @@
                 <div id="progress">
                     <div id="progress-bar"></div>
                     <div id="current-time">00.00</div>
-                    <div id="total-length">00.00</div>
+                    <div id="track-duration">00.00</div>
                 </div>
             </section>
             <hr>
