--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Media Player</title>
         <link rel="stylesheet" href="./main.css">
+        <link rel="icon" href="data:;base64,=">
     </head>
 
     <body>
@@ -22,15 +23,15 @@
                     <button id="btnSkipPre"><img src="./images/icons/skip_previous.svg" alt=""></button>
                     <button id="btnReplay"><img src="./images/icons/replay_10.svg" alt=""></button>
                     <button id="btnPlay"><img src="./images/icons/play_arrow.svg" alt=""></button>
-                    <button id="btnPause"><img src="./images/icons/pause.svg" alt=""></button>
+                    <button id="btnPause" class="display-none"><img src="./images/icons/pause.svg" alt=""></button>
                     <button id="btnStop"><img src="./images/icons/stop.svg" alt=""></button>
                     <button id="btnForward"><img src="./images/icons/forward.svg" alt=""></button>
                     <button id="btnSkipNext"><img src="./images/icons/skip_next.svg" alt=""></button>
                 </div>
                 <div id="progress">
                     <div id="progress-bar"></div>
-                    <div id="current-time">00.00</div>
-                    <div id="track-duration">00.00</div>
+                    <div id="current-time">00:00</div>
+                    <div id="track-duration">00:00</div>
                 </div>
             </section>
             <hr>
