before changing the player

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Media Player</title>
         <link rel="stylesheet" href="./main.css">
-        <link rel="icon" href="data:;base64,=">
+        <link rel="icon" href="data:;base64,="> 
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+        </style>
     </head>
 
     <body>
@@ -37,16 +42,6 @@
             <hr>
             <section id="playlist-area">
                 <h2 id="playlist-header">Your Play List:</h2>
-                <!-- <div class="list-item active">
-                    <img src="./media/somkeddream.jpg" alt="Song Thumbnail">
-                    <div class="track-info-pl">
-                        <p class="artist-list">Yasir Elamin</p>
-                        <p class="track-list">Smoked Dream</p>
-                    </div>
-                    <p class="duration">00.00</p>
-                </div> -->
-            </section>
-            <!-- <audio id="list-track" src="./media/somkeddream.mp3"> </audio> -->
         </main>
 
         <footer>
