--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <button id="btnStop"><img src="./images/icons/stop.svg" alt=""></button>
                     <button id="btnForward"><img src="./images/icons/forward.svg" alt=""></button>
                     <button id="btnSkipNext"><img src="./images/icons/skip_next.svg" alt=""></button>
+                    <button id="btnVolumeOn"><img src="./images/icons/volume_on.svg" alt=""></button>
                 </div>
                 <div id="progress">
                     <div id="progress-bar"></div>
