added mute function

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <button id="btnForward"><img src="./images/icons/forward.svg" alt=""></button>
                     <button id="btnSkipNext"><img src="./images/icons/skip_next.svg" alt=""></button>
                     <button id="btnVolumeOn"><img src="./images/icons/volume_on.svg" alt=""></button>
+                    <button id="btnVolumeOff" class="display-none"><img src="./images/icons/volume_off.svg" alt=""></button>
                 </div>
                 <div id="progress">
                     <div id="progress-bar"></div>
